<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center"
    android:background="@color/white">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/mail"/>
    <LinearLayout
        android:paddingStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailsent"
            android:textSize="15sp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmemail"
            android:textSize="15sp"
            android:textColor="@color/black"/>

    </LinearLayout>
    <Button
        android:id="@+id/okButton"
        android:background="@color/transparent"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textColor="@color/colorPrimary"/>
</LinearLayout>